--- a/ooresults/templates/entries_tab_content.html
+++ b/ooresults/templates/entries_tab_content.html
@@ -359,7 +359,12 @@
         var xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
-                entr_updateTable(this.responseText)
+                const obj = JSON.parse(this.responseText);
+                entr_updateTable(obj.table);
+                if ("status" in obj) {
+                    document.getElementById('statusDialogContent').innerHTML = obj.status;
+                    document.getElementById('statusDialog').style.display = "block";
+                }
             }
             if (this.readyState == 4 && this.status == 409) {
                 window.alert(this.responseText);
