--- a/ooresults/templates/classes_tab_content.html
+++ b/ooresults/templates/classes_tab_content.html
@@ -197,6 +197,9 @@
             if (this.readyState == 4 && this.status == 409) {
                 window.alert(this.responseText);
             }
+            if (this.readyState == 4 && this.status == 413) {
+                window.alert(this.responseText);
+            }
             if (this.readyState == 4 && this.status == 500) {
                 window.alert(this.responseText);
             }
