--- a/ooresults/templates/competitors_tab_content.html
+++ b/ooresults/templates/competitors_tab_content.html
@@ -215,6 +215,9 @@
             if (this.readyState == 4 && this.status == 409) {
                 window.alert(this.responseText);
             }
+            if (this.readyState == 4 && this.status == 413) {
+                window.alert(this.responseText);
+            }
             if (this.readyState == 4 && this.status == 500) {
                 window.alert(this.responseText);
             }
