--- a/ooresults/templates/select_event.html
+++ b/ooresults/templates/select_event.html
@@ -15,7 +15,7 @@
         </thead>
         <tbody>
         % for e in events:
-            <tr class="dt" id="${e.id}">
+            <tr class="dt" data-id="${e.id}">
                 <td class="dt">${e.name}</td>
                 <td class="dt">${e.date}</td>
             </tr>
