--- a/ooresults/templates/clubs_tab_content.html
+++ b/ooresults/templates/clubs_tab_content.html
@@ -78,7 +78,7 @@
         var table = document.getElementById('clb.table');
         for (var i = 1; i < table.rows.length; i++) {
             if (table.rows[i].className == "selected") {
-                document.getElementById('clb.deleteId').value=table.rows[i].id
+                document.getElementById('clb.deleteId').value=table.rows[i].dataset.id
                 document.getElementById('clb.deleteDialog').style.display='block'
             }
         }
@@ -107,7 +107,7 @@
                 };
                 xhr.open("POST", "club/fill_edit_form", true);
                 xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded; charset=UTF-8");
-                xhr.send("id=".concat(table.rows[i].id));
+                xhr.send("id=".concat(table.rows[i].dataset.id));
             }
         }
     }
