In the event of heartbeat errors, the offline status will be displayed earlier on the si1 page

--- a/ooresults/templates/si/si1_page.html
+++ b/ooresults/templates/si/si1_page.html
@@ -204,6 +204,8 @@
                     tp = setTimeout(function() {ping()}, 15000);
                 };
                 function nopong() {
+                    status = 'offline';
+                    message();
                     ws.close();
                 };
             };
